--- a/quickshell/translations/poexports/pt.json
+++ b/quickshell/translations/poexports/pt.json
@@ -242,6 +242,9 @@
   "Adjust the number of columns in grid view mode.": {
     "Adjust the number of columns in grid view mode.": "Ajusta o número de colunas no modo de visualização em grade"
   },
+  "Adjust volume per scroll indent": {
+    "Adjust volume per scroll indent": ""
+  },
   "Advanced": {
     "Advanced": "Avançado"
   },
@@ -292,6 +295,9 @@
   },
   "Analog": {
     "Analog": ""
+  },
+  "Animation Duration": {
+    "Animation Duration": ""
   },
   "Animation Speed": {
     "Animation Speed": "Velocidade de Animação"
@@ -400,6 +406,9 @@
     "No input devices found": "",
     "No output devices found": ""
   },
+  "Audio settings: maximum volume limit per device": {
+    "Max Volume": ""
+  },
   "Audio settings: speaker/headphone devices": {
     "Output Devices": ""
   },
@@ -498,6 +507,9 @@
   },
   "Automatically lock after": {
     "Automatically lock after": "Bloquear automaticamente após"
+  },
+  "Automatically lock the screen when DMS starts": {
+    "Automatically lock the screen when DMS starts": ""
   },
   "Automatically lock the screen when the system prepares to suspend": {
     "Automatically lock the screen when the system prepares to suspend": "Bloquear tela automaticamente quando o sistema é preparado para suspensão"
@@ -705,6 +717,9 @@
   },
   "Cancel": {
     "Cancel": "Cancelar"
+  },
+  "Cancel all jobs for \"%1\"?": {
+    "Cancel all jobs for \"%1\"?": ""
   },
   "Canceled": {
     "Canceled": "Cancelado"
@@ -1000,6 +1015,9 @@
   "Configure match criteria and actions": {
     "Configure match criteria and actions": ""
   },
+  "Configure which displays show \"%1": {
+    "Configure which displays show \"%1\"": ""
+  },
   "Configure which displays show shell components": {
     "Configure which displays show shell components": "Configurar em quais telas serão mostrados os componentes do shell"
   },
@@ -1141,6 +1159,9 @@
   "Create rule for:": {
     "Create rule for:": ""
   },
+  "Create rules to mute, ignore, hide from history, or override notification priority.": {
+    "Create rules to mute, ignore, hide from history, or override notification priority.": ""
+  },
   "Creating...": {
     "Creating...": "Criando..."
   },
@@ -1255,6 +1276,9 @@
   "DWL service not available": {
     "DWL service not available": "Serviço do DWL não disponível"
   },
+  "Daily": {
+    "Daily": ""
+  },
   "Daily Forecast": {
     "Daily Forecast": "Previsão diária"
   },
@@ -1321,6 +1345,9 @@
   "Delete": {
     "Delete": "Excluir"
   },
+  "Delete \"%1\"?": {
+    "Delete \"%1\"?": ""
+  },
   "Delete Class": {
     "Delete Class": "Excluir Classe"
   },
@@ -1332,6 +1359,12 @@
   },
   "Delete VPN": {
     "Delete VPN": "Excluir VPN"
+  },
+  "Delete class \"%1\"?": {
+    "Delete class \"%1\"?": ""
+  },
+  "Delete profile \"%1\"?": {
+    "Delete profile \"%1\"?": ""
   },
   "Derives colors that closely match the underlying image.": {
     "Derives colors that closely match the underlying image.": "Deriva cores que combinam de perto com a imagem de fundo."
@@ -1587,6 +1620,9 @@
   },
   "Enable Overview Overlay": {
     "Enable Overview Overlay": "Habilitar Sobreposição do Overview"
+  },
+  "Enable Ripple Effects": {
+    "Enable Ripple Effects": ""
   },
   "Enable System Monitor": {
     "Enable System Monitor": "Habilitar Monitor do Sistema"
@@ -1912,6 +1948,9 @@
   "Feels Like": {
     "Feels Like": "Sensação Térmica"
   },
+  "Field": {
+    "Field": ""
+  },
   "File": {
     "File": "Arquivo"
   },
@@ -1920,6 +1959,9 @@
   },
   "File Information": {
     "File Information": "Informação do Arquivo"
+  },
+  "File search requires dsearch\nInstall from github.com/morelazers/dsearch": {
+    "File search requires dsearch\nInstall from github.com/morelazers/dsearch": ""
   },
   "File search requires dsearch\\nInstall from github.com/morelazers/dsearch": {
     "File search requires dsearch\\nInstall from github.com/morelazers/dsearch": ""
@@ -2026,6 +2068,9 @@
   "Forget": {
     "Forget": "Esquecer"
   },
+  "Forget \"%1\"?": {
+    "Forget \"%1\"?": ""
+  },
   "Forget Device": {
     "Forget Device": "Esquecer Dispositivo"
   },
@@ -2043,6 +2088,9 @@
   },
   "Fullscreen": {
     "Fullscreen": ""
+  },
+  "Fullscreen Only": {
+    "Fullscreen Only": ""
   },
   "Fun": {
     "Fun": "Diversão"
@@ -2067,6 +2115,9 @@
   },
   "GitHub": {
     "GitHub": "GitHub"
+  },
+  "Globally scale all animation durations": {
+    "Globally scale all animation durations": ""
   },
   "Golden Hour": {
     "Golden Hour": "Hora Dourada"
@@ -2167,6 +2218,9 @@
   "Hide": {
     "Hide": ""
   },
+  "Hide 3rd Party": {
+    "Hide 3rd Party": ""
+  },
   "Hide App": {
     "Hide App": ""
   },
@@ -2229,6 +2283,9 @@
   },
   "Hour": {
     "Hour": "Hora"
+  },
+  "Hourly": {
+    "Hourly": ""
   },
   "Hourly Forecast": {
     "Hourly Forecast": "Previsão do Tempo Horária"
@@ -2721,6 +2778,9 @@
   "Lock Screen layout": {
     "Lock Screen layout": "Layout da Tela de Bloqueio"
   },
+  "Lock at startup": {
+    "Lock at startup": ""
+  },
   "Lock before suspend": {
     "Lock before suspend": "Bloquear antes de suspender"
   },
@@ -2882,6 +2942,9 @@
   },
   "Media Needed": {
     "Media Needed": "Papel Necessário"
+  },
+  "Media Playback": {
+    "Media Playback": ""
   },
   "Media Player": {
     "Media Player": "Reprodutor de Mídia"
@@ -3147,6 +3210,9 @@
   "No apps found": {
     "No apps found": ""
   },
+  "No apps have been launched yet.": {
+    "No apps have been launched yet.": ""
+  },
   "No battery": {
     "No battery": ""
   },
@@ -3231,8 +3297,11 @@
   "No variants created. Click Add to create a new monitor widget.": {
     "No variants created. Click Add to create a new monitor widget.": "Nenhuma variante criada. Clique Adicionar para criar um novo widget de monitor."
   },
+  "No wallpapers found\n\nClick the folder icon below to browse": {
+    "No wallpapers found\n\nClick the folder icon below to browse": ""
+  },
   "No widgets added. Click \"Add Widget\" to get started.": {
-    "No widgets added. Click \"Add Widget\" to get started.": "Nenhum widget adicionado. Clique em \"Adicionar widget\" para começar."
+    "No widgets added. Click \"Add Widget\" to get started.": ""
   },
   "No widgets available": {
     "No widgets available": ""
@@ -3288,6 +3357,9 @@
   "Notification Popups": {
     "Notification Popups": "Popups de Notificação"
   },
+  "Notification Rules": {
+    "Notification Rules": ""
+  },
   "Notification Settings": {
     "Notification Settings": "Configurações de Notificação"
   },
@@ -3320,6 +3392,12 @@
   },
   "Offline Report": {
     "Offline Report": "Relatório Offline"
+  },
+  "On": {
+    "On": ""
+  },
+  "On-Demand": {
+    "On-Demand": ""
   },
   "On-Screen Displays": {
     "On-Screen Displays": "Displays na Tela (OSDs)"
@@ -3524,7 +3602,7 @@
     "Make sure KDE Connect or Valent is running on your other devices": ""
   },
   "Phone Connect no devices status | bluetooth status": {
-    "No devices": "Nenhum dispositivo"
+    "No devices": ""
   },
   "Phone Connect pairing action": {
     "Device paired": "",
@@ -3620,6 +3698,9 @@
   "Popouts": {
     "Popouts": ""
   },
+  "Popouts and Modals follow global Animation Speed (disable to customize independently)": {
+    "Popouts and Modals follow global Animation Speed (disable to customize independently)": ""
+  },
   "Popup Position": {
     "Popup Position": "Posição do Popup"
   },
@@ -3671,6 +3752,9 @@
   "Precip": {
     "Precip": ""
   },
+  "Precipitation": {
+    "Precipitation": ""
+  },
   "Precipitation Chance": {
     "Precipitation Chance": "Chance de Precipitação"
   },
@@ -3721,6 +3805,9 @@
   },
   "Printers: ": {
     "Printers: ": "Impressoras: "
+  },
+  "Priority": {
+    "Priority": ""
   },
   "Privacy Indicator": {
     "Privacy Indicator": "Indicador de Privacidade"
@@ -3911,6 +3998,9 @@
   "Right-click bar widget to cycle": {
     "Right-click bar widget to cycle": "Clique no widget com o botão direito para alternar"
   },
+  "Ripple Effects": {
+    "Ripple Effects": ""
+  },
   "Root Filesystem": {
     "Root Filesystem": ""
   },
@@ -4048,6 +4138,9 @@
   },
   "Search Options": {
     "Search Options": ""
+  },
+  "Search by key combo, description, or action name.\n\nDefault action copies the keybind to clipboard.\nRight-click or press Right Arrow to pin frequently used keybinds - they'll appear at the top when not searching.": {
+    "Search by key combo, description, or action name.\n\nDefault action copies the keybind to clipboard.\nRight-click or press Right Arrow to pin frequently used keybinds - they'll appear at the top when not searching.": ""
   },
   "Search by key combo, description, or action name.\\n\\nDefault action copies the keybind to clipboard.\\nRight-click or press Right Arrow to pin frequently used keybinds - they'll appear at the top when not searching.": {
     "Search by key combo, description, or action name.\\n\\nDefault action copies the keybind to clipboard.\\nRight-click or press Right Arrow to pin frequently used keybinds - they'll appear at the top when not searching.": ""
@@ -4202,6 +4295,9 @@
   "Show": {
     "Show": ""
   },
+  "Show 3rd Party": {
+    "Show 3rd Party": ""
+  },
   "Show All Tags": {
     "Show All Tags": "Mostrar Todas as Tags"
   },
@@ -4264,6 +4360,9 @@
   },
   "Show Log Out": {
     "Show Log Out": "Mostrar Sair"
+  },
+  "Show Material Design ripple animations on interactive elements": {
+    "Show Material Design ripple animations on interactive elements": ""
   },
   "Show Memory": {
     "Show Memory": ""
@@ -4372,6 +4471,9 @@
   },
   "Show on-screen display when idle inhibitor state changes": {
     "Show on-screen display when idle inhibitor state changes": "Mostrar aviso na tela quando o estado do inibidor de ociosidade mudar"
+  },
+  "Show on-screen display when media player status changes": {
+    "Show on-screen display when media player status changes": ""
   },
   "Show on-screen display when media player volume changes": {
     "Show on-screen display when media player volume changes": "Mostrar aviso na tela quando o volume do reprodutor de mídia mudar"
@@ -4565,6 +4667,9 @@
   "Sync Mode with Portal": {
     "Sync Mode with Portal": "Sincronizar Modo Com Portal"
   },
+  "Sync Popouts & Modals": {
+    "Sync Popouts & Modals": ""
+  },
   "Sync Position Across Screens": {
     "Sync Position Across Screens": ""
   },
@@ -4664,11 +4769,17 @@
   "Third-Party Plugin Warning": {
     "Third-Party Plugin Warning": "Aviso Sobre Plugins de Terceiros"
   },
+  "Third-party plugins are created by the community and are not officially supported by DankMaterialShell.\n\nThese plugins may pose security and privacy risks - install at your own risk.": {
+    "Third-party plugins are created by the community and are not officially supported by DankMaterialShell.\n\nThese plugins may pose security and privacy risks - install at your own risk.": ""
+  },
   "Third-party plugins are created by the community and are not officially supported by DankMaterialShell.\\n\\nThese plugins may pose security and privacy risks - install at your own risk.": {
     "Third-party plugins are created by the community and are not officially supported by DankMaterialShell.\\n\\nThese plugins may pose security and privacy risks - install at your own risk.": "Plugins de terceiros são criados pela comunidade e não têm suporte oficial do DankMaterialShell.\\n\\nEsses plugins podem representar riscos à segurança e à privacidade - instale por sua conta e risco."
   },
   "This bind is overridden by config.kdl": {
     "This bind is overridden by config.kdl": ""
+  },
+  "This plugin does not have 'settings_write' permission.\n\nAdd \"permissions\": [\"settings_read\", \"settings_write\"] to plugin.json": {
+    "This plugin does not have 'settings_write' permission.\n\nAdd \"permissions\": [\"settings_read\", \"settings_write\"] to plugin.json": ""
   },
   "This widget prevents GPU power off states, which can significantly impact battery life on laptops. It is not recommended to use this on laptops with hybrid graphics.": {
     "This widget prevents GPU power off states, which can significantly impact battery life on laptops. It is not recommended to use this on laptops with hybrid graphics.": "Este widget mantém a GPU ativa, podendo reduzir a duração da bateria. Não recomendado em laptops com gráficos híbridos."
@@ -4847,6 +4958,9 @@
   "Unknown": {
     "Unknown": "Desconhecido"
   },
+  "Unknown Artist": {
+    "Unknown Artist": ""
+  },
   "Unknown Config": {
     "Unknown Config": ""
   },
@@ -4858,6 +4972,9 @@
   },
   "Unknown Network": {
     "Unknown Network": ""
+  },
+  "Unknown Title": {
+    "Unknown Title": ""
   },
   "Unnamed Rule": {
     "Unnamed Rule": ""
@@ -5020,6 +5137,9 @@
   },
   "VRR": {
     "VRR": ""
+  },
+  "VRR Fullscreen Only": {
+    "VRR Fullscreen Only": ""
   },
   "VRR On-Demand": {
     "VRR On-Demand": ""
@@ -5300,7 +5420,7 @@
     "Charging": "",
     "Discharging": "",
     "Empty": "",
-    "Fully Charged": "Totalmente carregada",
+    "Fully Charged": "",
     "No Battery": "",
     "Pending Charge": "",
     "Pending Discharge": "",
@@ -5309,15 +5429,13 @@
   "bluetooth status": {
     "Bluetooth": "",
     "Connected Device": "",
-    "Disabled": "Desativado",
-    "Enabled": "Ativado",
+    "Enabled": "",
     "No adapter": "",
     "No adapters": "",
-    "No devices": "Nenhum dispositivo",
     "Off": ""
   },
   "bluetooth status | lock screen notification mode option": {
-    "Disabled": "Desativado"
+    "Disabled": ""
   },
   "border color": {
     "Color": ""
@@ -5369,16 +5487,16 @@
     "Select Wallpaper": "Selecionar Papel de Parede"
   },
   "date format option": {
-    "Custom...": "Personalizado...",
-    "Day Date": "Dia e data",
-    "Day Month Date": "Dia, mês e data",
-    "Full Day & Month": "Dia completo e mês",
-    "Full with Year": "Completo com ano",
-    "ISO Date": "Data ISO",
-    "Month Date": "Mês e data",
-    "Numeric (D/M)": "Numérico (D/M)",
-    "Numeric (M/D)": "Numérico (M/D)",
-    "System Default": "Padrão do sistema"
+    "Custom...": "",
+    "Day Date": "",
+    "Day Month Date": "",
+    "Full Day & Month": "",
+    "Full with Year": "",
+    "ISO Date": "",
+    "Month Date": "",
+    "Numeric (D/M)": "",
+    "Numeric (M/D)": "",
+    "System Default": ""
   },
   "days": {
     "days": "dias"
@@ -5387,6 +5505,7 @@
     "dgop not available": ""
   },
   "dgop unavailable error message": {
+    "The 'dgop' tool is required for system monitoring.\nPlease install dgop to use this feature.": "",
     "The 'dgop' tool is required for system monitoring.\\nPlease install dgop to use this feature.": ""
   },
   "disk io header in system monitor": {
@@ -5411,8 +5530,8 @@
     "dms/outputs config exists but is not included in your compositor config. Display changes won't persist.": ""
   },
   "dock indicator style option": {
-    "Circle": "Círculo",
-    "Line": "Linha"
+    "Circle": "",
+    "Line": ""
   },
   "dock position option": {
     "Bottom": "",
@@ -5656,6 +5775,9 @@
     "Disabled": "",
     "Full Content": ""
   },
+  "lock screen notification mode option | notification rule match field option": {
+    "App Names": ""
+  },
   "lock screen notification privacy setting": {
     "Control what notification information is shown on the lock screen": "",
     "Notification Display": ""
@@ -5667,15 +5789,15 @@
     "loginctl not available - lock integration requires DMS socket connection": "loginctl não disponível - integração com bloqueio requer conexão de socket DMS"
   },
   "matugen color scheme option": {
-    "Content": "Conteúdo",
-    "Expressive": "Expressivo",
-    "Fidelity": "Fidelidade",
-    "Fruit Salad": "Salada de frutas",
-    "Monochrome": "Monocromático",
-    "Neutral": "Neutro",
-    "Rainbow": "Arco-íris",
-    "Tonal Spot": "Ponto tonal",
-    "Vibrant": "Vibrante"
+    "Content": "",
+    "Expressive": "",
+    "Fidelity": "",
+    "Fruit Salad": "",
+    "Monochrome": "",
+    "Neutral": "",
+    "Rainbow": "",
+    "Tonal Spot": "",
+    "Vibrant": ""
   },
   "matugen error": {
     "matugen not found - install matugen package for dynamic theming": ""
@@ -5687,9 +5809,9 @@
     "Matugen Missing": ""
   },
   "media scroll wheel option": {
-    "Change Song": "Trocar música",
-    "Change Volume": "Alterar volume",
-    "Nothing": "Nada"
+    "Change Song": "",
+    "Change Volume": "",
+    "Nothing": ""
   },
   "minutes": {
     "minutes": "minutos"
@@ -5763,6 +5885,30 @@
   "notification history toggle label": {
     "Enable History": ""
   },
+  "notification rule action option": {
+    "Ignore Completely": "",
+    "Mute Popups": "",
+    "No History": "",
+    "Popup Only": ""
+  },
+  "notification rule action option | notification rule urgency option | widget style option": {
+    "Default": ""
+  },
+  "notification rule match field option": {
+    "Body": "",
+    "Desktop Entry": "",
+    "Summary": ""
+  },
+  "notification rule match type option": {
+    "Contains": "",
+    "Exact": "",
+    "Regex": ""
+  },
+  "notification rule urgency option": {
+    "Critical Priority": "",
+    "Low Priority": "",
+    "Normal Priority": ""
+  },
   "now": {
     "now": ""
   },
@@ -5797,9 +5943,9 @@
     "Prioritize performance": ""
   },
   "power profile option": {
-    "Balanced": "Equilibrado",
-    "Performance": "Desempenho",
-    "Power Saver": "Economia de energia"
+    "Balanced": "",
+    "Performance": "",
+    "Power Saver": ""
   },
   "primary color": {
     "Primary": ""
@@ -5823,14 +5969,14 @@
     "Color theme from DMS registry": ""
   },
   "screen position option": {
-    "Bottom Center": "Inferior central",
-    "Bottom Left": "Inferior esquerdo",
-    "Bottom Right": "Inferior direito",
-    "Left Center": "Centro esquerdo",
-    "Right Center": "Centro direito",
-    "Top Center": "Superior central",
-    "Top Left": "Superior esquerdo",
-    "Top Right": "Superior direito"
+    "Bottom Center": "",
+    "Bottom Left": "",
+    "Bottom Right": "",
+    "Left Center": "",
+    "Right Center": "",
+    "Top Center": "",
+    "Top Left": "",
+    "Top Right": ""
   },
   "secondary color": {
     "Secondary": ""
@@ -5877,10 +6023,10 @@
     "Install color themes from the DMS theme registry": ""
   },
   "theme category option": {
-    "Auto": "Automático",
-    "Browse": "Navegar",
-    "Custom": "Personalizado",
-    "Generic": "Genérico"
+    "Auto": "",
+    "Browse": "",
+    "Custom": "",
+    "Generic": ""
   },
   "theme installation confirmation": {
     "Install theme '%1' from the DMS registry?": ""
@@ -5916,6 +6062,9 @@
   "uptime label in footer": {
     "Uptime:": ""
   },
+  "v%1 by %2": {
+    "v%1 by %2": ""
+  },
   "version requirement": {
     "Requires %1": ""
   },
@@ -5929,13 +6078,13 @@
     "Wallpaper Error": ""
   },
   "wallpaper fill mode": {
-    "Fill": "Preencher",
-    "Fit": "Ajustar",
-    "Pad": "Centralizar",
-    "Stretch": "Esticar",
-    "Tile": "Lado a lado",
-    "Tile H": "Lado a lado (H)",
-    "Tile V": "Lado a lado (V)"
+    "Fill": "",
+    "Fit": "",
+    "Pad": "",
+    "Stretch": "",
+    "Tile": "",
+    "Tile H": "",
+    "Tile V": ""
   },
   "wallpaper processing error": {
     "Wallpaper processing failed": ""
@@ -5950,15 +6099,15 @@
     "External Wallpaper Management": "Gerenciamento Externo de Papéis de Parede"
   },
   "wallpaper transition option": {
-    "Disc": "Disco",
-    "Fade": "Desvanecer",
-    "Iris Bloom": "Íris em expansão",
-    "None": "Nenhum",
-    "Pixelate": "Pixelizar",
-    "Portal": "Portal",
-    "Random": "Aleatório",
-    "Stripes": "Listras",
-    "Wipe": "Deslizar"
+    "Disc": "",
+    "Fade": "",
+    "Iris Bloom": "",
+    "None": "",
+    "Pixelate": "",
+    "Portal": "",
+    "Random": "",
+    "Stripes": "",
+    "Wipe": ""
   },
   "weather feels like temperature": {
     "Feels Like %1°": ""
